package com.example.search.presentation.utils

const val SEARCH_BAR_VIEW_TEST_TAG = "searchBarView"
const val SEARCH_BAR_TEST_TAG = "searchBar"
const val USER_LIST_TEST_TAG = "userList"
const val CIRCULAR_PROGRESS_TEST_TAG = "userList"
